[package]
name = "rust-playground"
version = "0.1.0"
authors = ["Jörn Dinkla <joern@dinkla.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "structs"
path = "src/structs.rs"

[[bin]]
name = "main"
path = "src/main.rs"

