[package]
name = "rust-playground"
version = "0.1.0"
authors = ["Jörn Dinkla <joern@dinkla.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"

[[bin]]
name = "structs"
path = "src/structs.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "test1"
path = "src/test1.rs"

[[bin]]
name = "guess"
path = "src/guess.rs"

